infra/teleport/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teleport
  namespace: teleport
  annotations:
    cert-manager.io/issuer: "cloudflare-prod"
spec:
  rules:
    - host: teleport.atoca.house
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teleport
                port:
                  number: 443
  tls:
    - hosts:
        - teleport.atoca.house
      secretName: teleport-tls
